# NeosPeeps

./: .drone.yml  .gitignore  Cargo.toml  LICENSE.md  PrivacyPolicy.md  README.md  build-flatpak.sh  build-release.sh  build.rs  deny.toml  flatpak.yml  gitea-publish.sh  itchio-publish.sh  release.sh  rustfmt.toml  xyz.ljoonal.neospeeps.yml
src/: api.rs  channels.rs  data.rs  image.rs  login.rs  main.rs  messages.rs  sessions.rs  styling.rs  threads.rs  updating.rs  users.rs
src/app/: about.rs  bar.rs  bars.rs  chat.rs  friends.rs  login.rs  messages.rs  mod.rs  peeps.rs  sessions.rs  settings.rs
src/data/: mod.rs  runtime.rs  stored.rs
src/threading/: channels.rs  loading.rs  mod.rs  pools.rs
static/: neos_peeps.desktop  user.png.license.txt  xyz.ljoonal.neospeeps.metainfo.xml
