[package]
name = "neos_peeps"
version = "0.0.0-alpha.3"
edition = "2021"
authors = ["ljoonal"]
description = "An application to view your neos friends."
repository = "https://git.ljoonal.xyz/ljoonal/NeosPeeps"
license = "AGPL-3.0"
keywords = ["neos"]
categories = ["games"]
publish = false
build = "build.rs"

# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neos = { version = "0.2.0-alpha.2", features = ["api_client"] }

eframe = { version = "0.16", default-features = false, features = [
	"egui_glow",
	"persistence",
] }

serde = "1"
serde_json = "1"

rand = { version = "0.8" }
chrono = "0.4"
#arc-swap = "^1.5"
rayon = "1.5.1"
lazy_static = "1.4"

webp = "0.2"

[dependencies.minreq]
version = "2.5"
features = ["https-rustls-probe", "json-using-serde"]

[dependencies.image]
version = "0.23"
default-features = false

features = [
	#	"bmp",
	#	"webp", # Alpha is not supported :/
	"png",
	#	"hdr",
	#	"tiff",
	"jpeg",
	"jpeg_rayon",
	#	"tga",
	"gif",
]

[profile.release]
# Optimizing mostly for size.
opt-level = "s"
codegen-units = 1
lto = "fat"
panic = "abort"

[build-dependencies]
winres = "0.1"

# For now run `strip target/release/neos_peeps`
#cargo-features = ["strip"]
#strip = true               # Automatically strip symbols from the binary.

[patch.crates-io]

#neos = { path = "../neos_rs/" }

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
