[package]
name = "neos_peeps"
version = "0.4.0-alpha.3"
edition = "2021"
authors = ["ljoonal"]
description = "An application to view your neos friends."
repository = "https://git.ljoonal.xyz/ljoonal/NeosPeeps"
license = "AGPL-3.0"
keywords = ["neos"]
categories = ["games"]
publish = false
build = "build.rs"

[dependencies]
neos = { version = "0.3.0", features = ["api_client"] }

eframe = { version = "0.17", default-features = false, features = [
	"egui_glow",
	"persistence",
] }

serde = "1"
serde_json = "1"

font-kit = { version = "0.11" }

chrono = "0.4"
#arc-swap = "^1.5"
crossbeam = "0.8.1"
rayon = "1.5.1"
lazy_static = "1.4"

sorted-vec = "0.8"

# ~10x faster than default, we don't need cryptographic guarantees for hashmaps
ahash = "0.7.6"

webp = "0.2.2"

[dependencies.minreq]
version = "2.6"
features = ["https-rustls-probe", "json-using-serde"]

[dependencies.image]
version = "0.24.1"
default-features = false

features = [
	#	"bmp",
	#	"webp", # Alpha is not supported :/
	"png",
	#	"hdr",
	#	"tiff",
	"jpeg",
	"jpeg_rayon",
	#	"tga",
	"gif",
]

[profile.dev.package."*"]
# Framerate tanks when loading images without this
opt-level = 2

[profile.release]
# Optimizing mostly for size.
opt-level = "s"
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[build-dependencies]
winres = "0.1.12"

[patch.crates-io]
#neos = { path = "../neos_rs/" }
#eframe = { git = "https://github.com/emilk/egui.git" }
