[package]
name = "neos_peeps"
version = "0.4.5"
edition = "2021"
authors = ["ljoonal"]
description = "An application to view your neos friends."
repository = "https://git.ljoonal.xyz/ljoonal/NeosPeeps"
license = "AGPL-3.0"
keywords = ["neos"]
categories = ["games"]
publish = false
build = "build.rs"

[features]
default = ["font-kit"]
font-kit = ["dep:font-kit"]

[dependencies]
neos = { version = "0.4.0-alpha.0", features = ["api_client"] }

eframe = { version = "0.19", default-features = false, features = [
	"glow",
	#"wgpu",
	"persistence",
] }

serde = "1"
serde_json = "1"

font-kit = { version = "0.10.1", optional = true }

time = { version = "0.3.14", features = ["serde-well-known", "macros"] }
#arc-swap = "^1.5"
crossbeam = "0.8.2"
rayon = "1.5.3"
lazy_static = "1.4"

sorted-vec = "0.8"

# ~10x faster than default, we don't need cryptographic guarantees for hashmaps
ahash = "0.8.0"

webp = "0.2.2"

[dependencies.minreq]
version = "2.6"
features = ["https-rustls-probe", "json-using-serde"]

[dependencies.image]
version = "0.24.3"
default-features = false

features = [
	#	"bmp",
	#	"webp", # Alpha is not supported :/
	"png",
	#	"hdr",
	#	"tiff",
	"jpeg",
	"jpeg_rayon",
	#	"tga",
	"gif",
]

[profile.dev.package."*"]
# Framerate tanks when loading images without this
opt-level = 2

[profile.release]
# Optimizing mostly for size.
opt-level = "s"
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[build-dependencies]
winres = "0.1.12"

[patch.crates-io]
#neos = { path = "../neos_rs/" }
#eframe = { git = "https://github.com/emilk/egui.git" }
